[project]
name = "clarityai"
version = "0.1.0"
description = "ClarityAI - AI-powered idea discovery and viability analysis tool for creators, founders, marketers, and builders to identify and validate their next great idea"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "agno>=0.1.0",
    "lancedb>=0.14.0",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "ragas>=0.2.0",
    "deepeval>=1.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "redis>=5.2.0",
    "newspaper4k>=0.9.3.1",
    "lxml-html-clean>=0.4.3",
    "googlesearch-python>=1.3.0",
    "pycountry>=24.6.1",
    "ddgs>=9.7.0",
    "agno-cli>=2.4.10",
    "yfinance>=0.2.66",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "duckdb>=1.4.1",
    "mysql-connector-python>=9.1.0",
    "psycopg2>=2.9.11",
    "psutil>=7.1.3",
    "docker>=7.1.0",
    "wikipedia>=1.4.0",
    "arxiv>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "black>=24.10.0",
    "ipython>=8.29.0",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "black>=24.10.0",
    "ipython>=8.29.0",
    "ipdb>=0.13.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
